--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,7 +5,10 @@
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
+		<title>AI Agent Prototype</title>
 	</head>
 	<body>
 		<slot />
@@ -16,7 +19,10 @@
 	html,
 	body {
 		margin: 0;
+		padding: 0;
 		width: 100%;
 		height: 100%;
+		background: rgb(64,139,180);
+		background: radial-gradient(circle, rgba(64,139,180,1) 0%, rgba(27,72,96,1) 63%, rgba(16,56,77,1) 78%, rgba(4,39,57,1) 100%);
 	}
 </style>
